# novaterm-dev

./: ARCHITECTURE.md  CODESTANDARD.md  PARSER_SPEC.md  README.md  build.zig  build.zig.zon  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/benches/: ansi_bench.rs
core/src/ansi/: HTML_IMPL_PLAN.md  html.rs  mod.rs
core/src/ansi/tests/: html_integration_tests.rs
gui/: Cargo.toml
nova-term/: Cargo.toml
