[package]
name = "nova-term"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = ["core", "gui", "plugins", "nova-term"]
resolver = "2"

[workspace.dependencies]
iced = { version = "0.12.1", features = ["opengl", "futures"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"